// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Login Component renders correctly 1`] = `
<div>
  <h4
    className="greeting"
  >
    Welcome 
    Caterer
     
    alias
  </h4>
</div>
`;

exports[`Login Component renders correctly 2`] = `
<div>
  <h4
    className="greeting"
  >
    Welcome 
    Customer
     
    alias
  </h4>
</div>
`;
